[package]
name = "magnitude"
version = "0.1.1"
authors = ["m.amin.rayej <m.amin.rayej@gmail.com>"]
edition = "2018"
description = "Magnitude - To infinity and beyond!"
license = "MIT"
documentation = "https://docs.rs/magnitude"
homepage = "https://github.com/maminrayej/magnitude"
repository = "https://github.com/maminrayej/magnitude"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.12"
